Single Page Webisite

--- a/src/style/about.less
+++ b/src/style/about.less
@@ -5,17 +5,17 @@
 
 .abouth{
     
-    margin-top: 5px;
-    
+    margin: 10px 0;
+    text-align: left;
 }
 
-.btn{
-    transition: padding .2s ease-out !important;
-}
+// .btn{
+//     transition: padding .2s ease-out !important;
+// }
 
-.btn:hover{
-    padding: 0 40px !important;
-}
+// .btn:hover{
+//     padding: 0 40px !important;
+// }
 
 .imgcontainer{
     padding-top: 50px;
@@ -25,5 +25,9 @@
     padding-bottom: 20px;
 }
 
-
+@media only screen and (max-width: 768px) {
+    .abouth{
+        text-align: center;
+    }
+  }
 
