--- a/src/style/about.less
+++ b/src/style/about.less
@@ -1,21 +1,24 @@
 .info{
     text-align: left;
     padding: 0 15px;
+    margin:0 20px;
+}
+
+.aboutsection{
+    min-height: 80vh;
 }
 
 .abouth{
     
     margin: 10px 0;
-    text-align: left;
+   
 }
 
 // .btn{
-//     transition: padding .2s ease-out !important;
+//     
 // }
 
-// .btn:hover{
-//     padding: 0 40px !important;
-// }
+
 
 .imgcontainer{
     padding-top: 50px;
