--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -15,9 +15,9 @@
 	padding: 0;
 }
 
-html{
-	scroll-behavior: smooth;
-}
+// html{
+// 	scroll-behavior: smooth;
+// }
 
 .details{
 	color: black;
@@ -393,9 +393,9 @@ div[role="navigation"]{
 }
 
 @media only screen and (max-width: 768px) {
-	html{
-		scroll-behavior: initial;
-	}
+	// html{
+	// 	scroll-behavior: initial;
+	// }
     .mypic{
         width: 200px;
         height: 200px;
