--- a/src/style/navbar.less
+++ b/src/style/navbar.less
@@ -223,7 +223,7 @@ nav {
 
 					&.side-active{
 						a span{
-							color: tomato;
+							color: @sideactive;
 							
 						}
 					}
@@ -251,6 +251,9 @@ nav {
 		}
 	}
 }
+
+
+
 
 
 @media only screen and (max-width: 800px) {
