--- a/src/style/portfolio.less
+++ b/src/style/portfolio.less
@@ -64,13 +64,12 @@
     
     .gitbtn{
         color: black;
-        
         padding: 10px 14px;
         background-color: white;
         border-radius: 6px;
-        font-weight: bold;
+        font-weight: 600;
         display: inline-flex;
-        font-size: 18px;
+        font-size: 16px;
         cursor: pointer;
         vertical-align: middle;
         align-items: center;
@@ -79,6 +78,13 @@
         transition: all .2s ease-out;
         margin-bottom: 10px;
     }
+
+    .playstorebtn{
+        background-color: #7ab800;
+        color: white;
+    }
+
+    
     
     p{
         font-size: 15px;
