--- a/src/style/about.less
+++ b/src/style/about.less
@@ -13,6 +13,7 @@
 .abouth{
     
     margin: 10px 0;
+    font-size: 64px;
    
 }
 
@@ -33,6 +34,7 @@
 @media only screen and (max-width: 768px) {
     .abouth{
         text-align: center;
+        font-size: 50px;
     }
   }
 
